@@ -1,3 +1,10 @@
+16 August 2007
+
+* Clarify headers/body again. The body offset is now the first byte of the
+  body, so a mail of a single blank line has size == body == 1 (so, body
+  size == 0 rather than 1). "\nBody" always had body == 1 and not having
+  "\n" the same was confusing me.
+
 15 August 2007
 
 * A few POP3 servers supply an APOP cookie and then refuse the APOP command.
@@ -528,4 +535,4 @@
   the mail was very rarely reallocated, now that the header is added it is.
 * Changed all the descriptions to static buffers and audited use of snprintf.
 
-$Id: CHANGES,v 1.139 2007-08-15 13:30:08 nicm Exp $
+$Id: CHANGES,v 1.140 2007-08-15 23:30:10 nicm Exp $
